# codeswarm

./: .gitignore  DESIGN.md  README.md  omium.toml  pyproject.toml
codeswarm/: __init__.py  __main__.py  cli.py  config.py  corpus_runner.py
codeswarm/agents/: __init__.py  base.py  coder.py  planner.py  reviewer.py  spec.py  tester.py
codeswarm/llm/: __init__.py  client.py
codeswarm/sandbox/: __init__.py  workspace.py
codeswarm/tasks/: __init__.py  spec.py
codeswarm/tasks/builtin/: __init__.py  algorithms.py  bugfix.py  data_structures.py  parsing.py
codeswarm/tools/: __init__.py  base.py  fs.py  shell.py  testing.py
codeswarm/trace/: __init__.py  recorder.py  types.py
codeswarm/web/: __init__.py  app.py
codeswarm/workflow/: __init__.py  engine.py  executor.py  omium_executor.py  state.py
docs/: seed_multinode_proposal.sql
tests/: test_corpus_green.py  test_corpus_runner.py  test_omium_corpus.py  test_openai_compatible.py  test_smoke.py
